--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "pretty-quick": "^3.3.1",
         "rimraf": "^3.0.2",
         "run-script-os": "^1.1.6",
-        "turbo": "1.10.16",
+        "turbo": "2.5.0",
         "typescript": "^5.8.3"
     },
     "pnpm": {
@@ -117,5 +117,6 @@
                 }
             ]
         ]
-    }
+    },
+    "packageManager": "pnpm@10.8.0"
 }
