--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "flowise",
+    "name": "server-flowise",
     "version": "2.2.7-patch.1",
     "description": "Flowiseai Server",
     "main": "dist/index",
